Fix mobile overflow

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -4,12 +4,14 @@
 .appContent {
   margin-top: 56px;
   max-width: 800px;
-  width: 100%;
   position: absolute;
   padding-right: 16px;
   word-break: break-word;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  @media screen and (min-width: 1024px) {
+    width: 100%;
+  }
 }
 
 
